@@ -1,7 +1,8 @@
 package com.frontend.frontend.service;
 
-import com.frontend.frontend.TokenStore;
-import com.frontend.frontend.model.RecetaDTO;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Optional;
 
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
@@ -11,16 +12,25 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 import org.springframework.web.util.UriComponentsBuilder;
 
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
+import com.frontend.frontend.TokenStore;
+import com.frontend.frontend.model.RecetaDTO;
 
 @Service
 @SuppressWarnings("null")
 public class RecetaService {
 
+    private static final String AUTHORIZATION_HEADER = "Authorization";
+    private static final String BEARER_PREFIX = "Bearer ";
+    private static final String CONTENT_TYPE_HEADER = "Content-Type";
+    private static final String APPLICATION_JSON = "application/json";
+    private static final String BUSCAR_SEGMENT = "buscar";
+    private static final String MEDIA_SEGMENT = "media";
+    private static final String COMENTARIOS_SEGMENT = "comentarios";
+    private static final String VALORACIONES_SEGMENT = "valoraciones";
+    private static final String USER_ID_PARAM = "userId";
+
     private final RestTemplate restTemplate;
-    private final String baseUrl = "http://localhost:8082/api/recetas";
+    private static final String BASE_URL = "http://localhost:8082/api/recetas";
     private final TokenStore tokenStore;
 
     public RecetaService(TokenStore tokenStore, RestTemplate restTemplate) {
@@ -31,7 +41,8 @@ public class RecetaService {
     public List<RecetaDTO> buscarRecetas(String nombre, String tipoCocina, String ingredientes, String paisOrigen,
             String dificultad, Boolean popular) {
 
-        String uri = UriComponentsBuilder.fromUriString(baseUrl + "/buscar")
+        String uri = UriComponentsBuilder.fromUriString(BASE_URL)
+            .pathSegment(BUSCAR_SEGMENT)
                 .queryParamIfPresent("nombre", Optional.ofNullable(nombre))
                 .queryParamIfPresent("tipoCocina", Optional.ofNullable(tipoCocina))
                 .queryParamIfPresent("ingredientes", Optional.ofNullable(ingredientes))
@@ -41,16 +52,16 @@ public class RecetaService {
                 .toUriString();
         RecetaDTO[] recetas = restTemplate.getForObject(uri, RecetaDTO[].class);
 
-        return Arrays.asList(recetas);
+        return recetas == null ? List.of() : Arrays.asList(recetas);
     }
 
     public RecetaDTO findById(Long id) {
-        String uri = baseUrl + "/" + id;
+        String uri = BASE_URL + "/" + id;
         String token = tokenStore.getToken();
 
         HttpHeaders headers = new HttpHeaders();
         if (token != null && !token.isEmpty()) {
-            headers.set("Authorization", "Bearer " + token);
+            headers.set(AUTHORIZATION_HEADER, BEARER_PREFIX + token);
         }
         HttpEntity<String> entity = new HttpEntity<>(headers);
 
@@ -64,22 +75,33 @@ public class RecetaService {
     }
 
     public void addMedia(Long recetaId, List<com.frontend.frontend.model.RecetaMediaDTO> media) {
-        String uri = baseUrl + "/" + recetaId + "/media";
+        String uri = UriComponentsBuilder.fromUriString(BASE_URL)
+                .pathSegment(String.valueOf(recetaId))
+                .pathSegment(MEDIA_SEGMENT)
+                .toUriString();
         String token = tokenStore.getToken();
         HttpHeaders headers = new HttpHeaders();
-        headers.set("Authorization", "Bearer " + token);
-        headers.set("Content-Type", "application/json");
+        if (token != null && !token.isEmpty()) {
+            headers.set(AUTHORIZATION_HEADER, BEARER_PREFIX + token);
+        }
+        headers.set(CONTENT_TYPE_HEADER, APPLICATION_JSON);
 
         HttpEntity<List<com.frontend.frontend.model.RecetaMediaDTO>> entity = new HttpEntity<>(media, headers);
         restTemplate.postForEntity(uri, entity, Void.class);
     }
 
     public void addComment(Long recetaId, String contenido, Long userId) {
-        String uri = baseUrl + "/" + recetaId + "/comentarios?userId=" + userId;
+        String uri = UriComponentsBuilder.fromUriString(BASE_URL)
+            .pathSegment(String.valueOf(recetaId))
+            .pathSegment(COMENTARIOS_SEGMENT)
+                .queryParam(USER_ID_PARAM, userId)
+                .toUriString();
         String token = tokenStore.getToken();
         HttpHeaders headers = new HttpHeaders();
-        headers.set("Authorization", "Bearer " + token);
-        headers.set("Content-Type", "application/json");
+        if (token != null && !token.isEmpty()) {
+            headers.set(AUTHORIZATION_HEADER, BEARER_PREFIX + token);
+        }
+        headers.set(CONTENT_TYPE_HEADER, APPLICATION_JSON);
 
         com.frontend.frontend.model.ComentarioDTO comentario = new com.frontend.frontend.model.ComentarioDTO(contenido);
         HttpEntity<com.frontend.frontend.model.ComentarioDTO> entity = new HttpEntity<>(comentario, headers);
@@ -87,11 +109,17 @@ public class RecetaService {
     }
 
     public void addRating(Long recetaId, Integer puntuacion, Long userId) {
-        String uri = baseUrl + "/" + recetaId + "/valoraciones?userId=" + userId;
+        String uri = UriComponentsBuilder.fromUriString(BASE_URL)
+            .pathSegment(String.valueOf(recetaId))
+            .pathSegment(VALORACIONES_SEGMENT)
+                .queryParam(USER_ID_PARAM, userId)
+                .toUriString();
         String token = tokenStore.getToken();
         HttpHeaders headers = new HttpHeaders();
-        headers.set("Authorization", "Bearer " + token);
-        headers.set("Content-Type", "application/json");
+        if (token != null && !token.isEmpty()) {
+            headers.set(AUTHORIZATION_HEADER, BEARER_PREFIX + token);
+        }
+        headers.set(CONTENT_TYPE_HEADER, APPLICATION_JSON);
 
         com.frontend.frontend.model.ValoracionDTO valoracion = new com.frontend.frontend.model.ValoracionDTO(
                 puntuacion);
